--- a/lap/php/Dockerfile
+++ b/lap/php/Dockerfile
@@ -8,6 +8,6 @@ RUN apt-get update && apt-get install -y \
   libjpeg62-turbo-dev \
   libpng12-dev \
   libicu-dev \
-    && docker-php-ext-install -j$(nproc) intl mbstring \
+    && docker-php-ext-install -j$(nproc) intl  \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
